Added wug picture

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
   </style>
 </head>
 <body>
+	<img src="https://pbs.twimg.com/profile_images/529278460963721217/i9gTPmXC_400x400.jpeg">
 </body>
 </html>
