--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
 </head>
 <body>
 	<img src="https://pbs.twimg.com/profile_images/529278460963721217/i9gTPmXC_400x400.jpeg">
+	<audio loop="loop" autoplay="autoplay"><source src="chickensong.mp3" type="audio/mpeg"/></audio?>
 </body>
 </html>
